[package]
name = "osrm_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror      = "1.0"
reqwest        = { version = "0.11", features = ["json"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
derive_builder = "0.12"

[dev-dependencies]
tokio = {version = "1.0", features = ["rt-multi-thread", "macros"]}