[package]
name = "osrm_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror      = "1.0"
displaythis    = "1.0"
reqwest        = { version = "0.11", features = ["json"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
derive_builder = "0.12"
bytes          = "1.3"

[dev-dependencies]
anyhow = "1.0"
tokio = {version = "1.0", features = ["rt-multi-thread", "macros"]}
futures   = "0.3"
nominatim = "0.3"

mapbox_vector_tile = "0.4.0"