[package]
name             = "osrm_client"
version          = "0.1.1"
authors          = ["Xavier Gillard <xavier.gillard@uclouvain.be>"]
edition          = "2021"
description      = "A lightweight client for the HTTP services provided by OSRM."
repository       = "https://github.com/xgillard/osrm_client"
readme           = "README.md"
license          = "MIT"
keywords         = ["osrm", "openstreetmap", "webservices"]
categories       = ["api-bindings"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror        = "1.0"
displaythis      = "1.0"
reqwest          = { version = "0.11", features = ["json"] }
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
derive_builder   = "0.12"
bytes            = "1.3"

[dev-dependencies]
anyhow           = "1.0"
tokio = {version = "1.0", features = ["rt-multi-thread", "macros"]}
futures          = "0.3"
nominatim        = "0.3"